--- a/speedtest/index.html
+++ b/speedtest/index.html
@@ -9,6 +9,6 @@
 <body>
      <a href="../"><-- Go back</a>
     <h1>Test your internet speed</h1><hr><pre></pre>
-    <!--OST Widget code start--><div style="text-align:right;"><div style="min-height:360px;"><div style="width:50%;height:0;padding-bottom:0%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:75%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/Get-widget.php"></iframe></div></div>Provided by  <a href="http://openspeedtest.com">OpenSpeedtest.com</a></div><!-- OST Widget code end -->
+    <iframe width="100%" height="650px" frameborder="0" src="https://speedtest.net"></iframe>
 </body>
 </html>
