--- a/speedtest/index.html
+++ b/speedtest/index.html
@@ -9,6 +9,6 @@
 <body>
      <a href="../"><-- Go back</a>
     <h1>Test your internet speed</h1><hr><pre></pre>
-    <iframe width="100%" height="650px" frameborder="0" src="https://speedtest.net"></iframe>
+    <iframe width="100%" height="650px" frameborder="0" src="https://fauser.speedtestcustom.com"></iframe>
 </body>
 </html>
